--- a/languages/woocommerce-pdf-invoices-packing-slips-ru_RU.po
+++ b/languages/woocommerce-pdf-invoices-packing-slips-ru_RU.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WooCommerce PDF Invoices & Packing Slips\n"
-"POT-Creation-Date: 2017-06-09 16:38+0200\n"
-"PO-Revision-Date: 2017-06-09 16:38+0200\n"
-"Last-Translator: Oleg Komarovskyi <komarovski21@gmail.com>\n"
+"POT-Creation-Date: 2018-11-17 01:38+0300\n"
+"PO-Revision-Date: 2018-11-17 01:38+0300\n"
+"Last-Translator: Ilya Babunashvili <ilyabitru@gmail.com>\n"
 "Language-Team: WP Overnight <support@wpovernight.com>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: includes/class-wcpdf-admin.php:72 includes/class-wcpdf-admin.php:174
 msgid "Invoice Number"
-msgstr "Номер Накладной"
+msgstr "Номер Счета"
 
 #: includes/class-wcpdf-admin.php:105
 msgid "Create PDF"
@@ -35,12 +35,12 @@ msgstr ""
 #: includes/legacy/class-wcpdf-legacy-functions.php:22
 #: templates/Simple/invoice.php:10 templates/Simple/invoice.php:22
 msgid "Invoice"
-msgstr "Накладная"
+msgstr "Счет"
 
 #: includes/class-wcpdf-admin.php:183 includes/class-wcpdf-admin.php:204
 #: templates/Simple/invoice.php:56
 msgid "Invoice Date:"
-msgstr "Дата Накладной:"
+msgstr "Дата Счета:"
 
 #: includes/class-wcpdf-admin.php:189
 msgid "Set invoice number & date"
@@ -60,7 +60,7 @@ msgstr "м"
 
 #: includes/class-wcpdf-frontend.php:55
 msgid "Download invoice (PDF)"
-msgstr "Скачать накладную (PDF)"
+msgstr "Скачать счет (PDF)"
 
 #: includes/class-wcpdf-main.php:132 includes/class-wcpdf-main.php:153
 #: includes/class-wcpdf-main.php:160 includes/class-wcpdf-main.php:166
@@ -246,7 +246,7 @@ msgstr "Это третья колонка подвала для <i>Modern (Prem
 
 #: includes/class-wcpdf-settings.php:45 includes/class-wcpdf-settings.php:46
 msgid "PDF Invoices"
-msgstr "PDF Накладные"
+msgstr "PDF Счета"
 
 #: includes/class-wcpdf-settings.php:58
 msgid "Settings"
@@ -335,9 +335,9 @@ msgstr ""
 #: includes/documents/class-wcpdf-invoice.php:85
 msgid "invoice"
 msgid_plural "invoices"
-msgstr[0] "накладная"
-msgstr[1] "накладная"
-msgstr[2] "накладная"
+msgstr[0] "счет"
+msgstr[1] "счет"
+msgstr[2] "счет"
 
 #: includes/documents/class-wcpdf-invoice.php:130
 #: includes/documents/class-wcpdf-packing-slip.php:94
@@ -357,7 +357,7 @@ msgid ""
 msgstr ""
 "Судя по всему временная папка (<code>%s</code>) без прав на запись, "
 "проверьте разрешения для этой папки! Без доступа записи к этой папке, плагин "
-"не сможет посылать накладные по email."
+"не сможет посылать счета по email."
 
 #: includes/documents/class-wcpdf-invoice.php:154
 msgid "Display shipping address"
@@ -381,7 +381,7 @@ msgstr ""
 
 #: includes/documents/class-wcpdf-invoice.php:188
 msgid "Display invoice date"
-msgstr "Отображать дату накладной"
+msgstr "Отображать дату счета"
 
 #: includes/documents/class-wcpdf-invoice.php:200
 msgid "Display invoice number"
@@ -389,7 +389,7 @@ msgstr ""
 
 #: includes/documents/class-wcpdf-invoice.php:212
 msgid "Next invoice number (without prefix/suffix etc.)"
-msgstr "Следующий номер накладной (без префикса/суффикса и т.д.)"
+msgstr "Следующий номер счета (без префикса/суффикса и т.д.)"
 
 #: includes/documents/class-wcpdf-invoice.php:218
 msgid ""
@@ -460,7 +460,7 @@ msgstr ""
 
 #: includes/documents/class-wcpdf-invoice.php:290
 msgid "Enable invoice number column in the orders list"
-msgstr "Показывать номер накладной в списке заказов"
+msgstr "Показывать номера счетов в списке заказов"
 
 #: includes/documents/class-wcpdf-invoice.php:301
 msgid "Disable for free products"
@@ -485,7 +485,7 @@ msgstr ""
 #: includes/legacy/class-wcpdf-legacy-functions.php:25
 #: templates/Simple/packing-slip.php:10 templates/Simple/packing-slip.php:22
 msgid "Packing Slip"
-msgstr "Счет-Фактура"
+msgstr "Накладная"
 
 # This is a filename (prefix). do not use spaces or special characters!
 #: includes/documents/class-wcpdf-packing-slip.php:53
@@ -716,7 +716,7 @@ msgstr ""
 
 #: templates/Simple/invoice.php:50
 msgid "Invoice Number:"
-msgstr "Номер Накладной:"
+msgstr "Номер Счета:"
 
 #: templates/Simple/invoice.php:61 templates/Simple/packing-slip.php:49
 msgid "Order Number:"
@@ -799,14 +799,14 @@ msgstr ""
 #~ "that if you override this and set it lower than the highest (PDF) invoice "
 #~ "number, this could create double invoice numbers!"
 #~ msgstr ""
-#~ "Этот номер будет использован в следующей созданой накладной. По "
+#~ "Этот номер будет использован в следующем созданом счете. По "
 #~ "умолчанию, нумерация начинается с первого, созданого WooCommerce Номера "
-#~ "Заказа и повышается с каждой следующей накладной. Заметьте что если вы "
-#~ "перезапишите его и установите номер ниже предыдущих (PDF) накладных, это "
-#~ "приведет к дублированию номера накладной!"
+#~ "Заказа и повышается с каждым следующим счетом. Заметьте что если вы "
+#~ "перезапишите его и установите номер ниже предыдущих (PDF) счетов, это "
+#~ "приведет к дублированию номера счета!"
 
 #~ msgid "Invoice number format"
-#~ msgstr "Формат номера накладной"
+#~ msgstr "Формат номера счета"
 
 #~ msgid "Template"
 #~ msgstr "Шаблон"
@@ -815,7 +815,7 @@ msgstr ""
 #~ "Upload all invoices automatically to your dropbox!<br/>Check out the %s "
 #~ "extension."
 #~ msgstr ""
-#~ "Загружайте все накладные автоматически в ваш dropbox!<br/>Смотрите %s "
+#~ "Загружайте все счета автоматически в ваш dropbox!<br/>Смотрите %s "
 #~ "расширение."
 
 #~ msgid ""
@@ -835,13 +835,13 @@ msgstr ""
 #~ msgstr "Email адресу Клиента, для Завершенных Заказов"
 
 #~ msgid "Customer Invoice email"
-#~ msgstr "Email адресу Накладной Клиента"
+#~ msgstr "Email адрес для Счета Клиента"
 
 #~ msgid "PDF Template settings"
 #~ msgstr "PDF Настройки шаблона"
 
 #~ msgid "Display built-in sequential invoice number"
-#~ msgstr "Отображать встроенный последовательный номер накладной"
+#~ msgstr "Отображать встроенный последовательный номер счета"
 
 #~ msgid ""
 #~ "to use the order year and/or month, use [order_year] or [order_month] "
@@ -851,13 +851,13 @@ msgstr ""
 #~ "[order_month] в соответсвии с названием"
 
 #~ msgid "PDF Packing Slips"
-#~ msgstr "PDF Счет-Фактуры"
+#~ msgstr "PDF Накладная"
 
 #~ msgid "PDF Invoice"
-#~ msgstr "PDF Накладная"
+#~ msgstr "PDF Счет"
 
 #~ msgid "PDF Packing Slip"
 #~ msgstr "PDF Счет-Фактура"
 
 #~ msgid "PDF Invoice Number (unformatted!)"
-#~ msgstr "PDF Номер Накладной (неформатированный!)"
+#~ msgstr "PDF Номер Счета (неформатированный!)"
