--- a/languages/woocommerce-pdf-invoices-packing-slips-de_DE.po
+++ b/languages/woocommerce-pdf-invoices-packing-slips-de_DE.po
@@ -6,11 +6,11 @@ msgstr ""
 "Stable (latest release)\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/woocommerce-pdf-"
 "invoices-packing-slips\n"
-"POT-Creation-Date: 2021-05-25T12:50:50+00:00\n"
-"PO-Revision-Date: 2021-05-25 08:54-0400\n"
+"POT-Creation-Date: 2021-05-30T22:57:30+00:00\n"
+"PO-Revision-Date: 2021-05-30 19:18-0400\n"
 "Last-Translator: Yordan Soares <contacto@yordansoar.es>\n"
 "Language-Team: \n"
-"Language: de\n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -168,7 +168,7 @@ msgid "Document data saved!"
 msgstr ""
 
 #: includes/class-wcpdf-admin.php:771
-msgid "An error ocurred while saving the document data!"
+msgid "An error occurred while saving the document data!"
 msgstr ""
 
 #: includes/class-wcpdf-admin.php:774
@@ -176,7 +176,7 @@ msgid "Document regenerated!"
 msgstr ""
 
 #: includes/class-wcpdf-admin.php:775
-msgid "An error ocurred while regenerating the document!"
+msgid "An error occurred while regenerating the document!"
 msgstr ""
 
 #: includes/class-wcpdf-admin.php:778
@@ -184,7 +184,7 @@ msgid "Document deleted!"
 msgstr ""
 
 #: includes/class-wcpdf-admin.php:779
-msgid "An error ocurred while deleting the document!"
+msgid "An error occurred while deleting the document!"
 msgstr ""
 
 #: includes/class-wcpdf-admin.php:829
